# phoneme_class_1D

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
claude_config/: CLAUDE.md  UPGRADE_NOTES.md
claude_config/claude_config/: README.md  VERSION.md
claude_config/claude_config/checklists/: before_coding.md  commit.md  session_end.md  session_start.md
claude_config/claude_config/core/: communication_rules.md  principles.md  security.md  version_info.md
claude_config/claude_config/experts/: README.md
claude_config/claude_config/guidelines/: coding_standards.md  data_handling.md  git_workflow.md  testing_strategy.md
claude_config/claude_config/project/: architecture.md  details.md  log.md
configs/: base.yaml
data/raw/New Stimuli 9-8-2024/: Guide.xlsx
experiment/: exp_params.py  experiment.py
runs/20250521_225915/: config.json
runs/20250521_231057/: config.json
runs/20250521_235217/: config.json
runs/20250522_001145/: config.json
runs/20250522_001220/: config.json
runs/20250522_001507/: config.json
runs/20250522_092557/: log.txt
runs/20250522_100833/: config.json  log.txt
runs/20250522_114523/: config.json
src/data/: dataset.py  features.py
src/data_utils/: dataset.py  parser.py
src/experiment/: exp_params.py  experiment.py
src/transforms/: build_transforms.py  compose.py  log_mel.py  masking.py  mfcc.py  noise.py  wavelet.py
src/utils/: device.py  diagnostics.py  evaluate_latent_classification.py  logger.py  samplers.py  system_resources.py
tests/: test_dataset.py  test_parser.py  test_transforms.py
utils/: device.py
(+12 files in other folders)
