[project]
name = "phoneme-class-1d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.6.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "typer>=0.15.4",
]
